include/bwaudio.h

typedef struct BwEngine BwEngine;   /* opaque */
typedef uint32_t BwSource;
typedef struct {
    BwProfile   profile;
    const char* layout_path;   /* surveyed speaker geometry (JSON). cave/both. */
    const char* hrtf_path;     /* HRTF (SOFA) or NULL for built-in. binaural/both. */
    uint32_t    sample_rate;   /* 48000 */
    uint32_t    block_size;    /* ASIO buffer hint, e.g. 256/512 */
    bool        track_internal;/* true: core reads OptiTrack/NatNet itself.
                                * false: engine pushes pose via bw_set_listener_pose. */
} BwConfig;
/* ---- lifecycle (control thread; may block/allocate; do at load time) ---- */
BW_API BwEngine* bw_create(const BwConfig* cfg);
BW_API int       bw_start(BwEngine* e);   /* opens device(s), starts audio thread. 0 = ok */
/* An acoustic material — an opaque, engine-scoped token. 0 is always a built-in generic default.
 * Mint materials at LOAD time (the table is fixed-capacity); a token indexes both occlusion
 * (per-band transmission) and the reflection bed (absorption/scattering). */
typedef uint32_t BwMaterial;
/* Mint a material from a named preset (case-insensitive): "generic", "brick", "concrete", "ceramic",
 * "gravel", "carpet", "glass", "plaster", "wood", "metal", "rock". Returns 0 (the default material,
 * NOT an error sentinel) on an unknown name or a full table — check bw_last_error to distinguish. */
BW_API BwMaterial bw_material_preset(BwEngine* e, const char* name);
/* Convenience: a shoebox enclosure of size w x h x d metres, FLOOR-based — centred on the origin
 * in x/z, y from 0 (the floor) up to h — with one material per face. faces[6] = (-x,+x,-y,+y,-z,+z);
 * each a BwMaterial token (0 = default). Triangle normals face inward (the listener is inside).
 * Load-time. No-op without the Steam Audio backend. */
BW_API void     bw_scene_set_box(BwEngine* e, float w, float h, float d, const BwMaterial faces[6]);
/* ---- reflection bed (materials; needs the Steam Audio build) ----
 * A single shared listener-centric reverb bed (Steam Audio hybrid reverb), decoded straight to the
 * 26 speakers and summed onto the bus. Configure at LOAD time (the IR length + order are baked at
 * bw_start), then opt sources into its wet send. v1 assumes a static scene (set geometry before
 * bw_start). No-op without the Steam Audio backend. */
typedef struct {
    float    ir_seconds;     /* reverb tail / IR length; 0 -> default 1.0 (range ~0.5..2.0) */
    uint32_t order;          /* reflection ambisonic order, 1 or 2; 0 -> default 1 */
    uint32_t num_rays;       /* off-thread ray budget; 0 -> default 4096 */
    uint32_t num_bounces;    /* off-thread bounce depth; 0 -> default 16 */
    int      enabled;        /* 0 = no bed created (engine behaves exactly as today) */
    float    wet_gain;       /* linear level of the reverb summed onto the bus; 0 -> default 1.0 */
    uint32_t reserved[3];    /* zero; reserved so the struct can grow without an ABI break */
} BwReflectionConfig;
/* Set the reflection config. Load-time only (between bw_create and bw_start); copies the struct,
 * zero fields take defaults. No-op without the Steam Audio backend. */
BW_API void     bw_reflections_config(BwEngine* e, const BwReflectionConfig* cfg);
/* Set the reverb wet level (linear; 1 = unity) live. Per-frame-safe. No-op if the bed isn't running. */
BW_API void     bw_reflections_set_gain(BwEngine* e, float linear);
/* Opt a source into the shared bed's wet send (per-frame-safe, enqueue-only). With the bed disabled
 * or no SDK, this just gates a send that goes nowhere. */
BW_API void     bw_source_set_reflections(BwEngine* e, BwSource s, bool on);
/* Per-source wet-send LEVEL (default 1.0; 0 = none). Scales how much of this source feeds the shared
 * reverb bed — drive it yourself for a manual dry/wet, or use the distance mode below. Per-frame-safe. */
BW_API void     bw_source_set_reflection_send(BwEngine* e, BwSource s, float gain);
/* Distance->wet: when on, the engine scales this source's send by its distance to the listener (near =
 * drier, far = wetter), on top of the level above. Off by default (constant send). Per-frame-safe. */
BW_API void     bw_source_set_reflection_distance(BwEngine* e, BwSource s, bool on);
/* Opt a source into sound PATHING: when the direct line is blocked, its sound is routed to the
 * listener along indirect paths (around occluders / through openings) and decoded to the array from
 * those arrival directions. Requires the scene geometry + BWAUDIO_PATHING at start; no-op otherwise.
 * Per-frame-safe (enqueue-only). The indirect field updates at the sim rate (~10 Hz), ramped. */
BW_API void     bw_source_set_pathing(BwEngine* e, BwSource s, bool on);
/* ---- directivity (control thread; needs the Steam Audio build) ----
 * Source radiation pattern. Sources are omni by default; set a weighted-dipole pattern + the
 * source's forward orientation, and a listener off the source's forward axis hears it attenuated.
 * Independent of occlusion (a source can be directional without being occluded). */
typedef enum { BW_DIR_OMNI = 0, BW_DIR_CARDIOID = 1, BW_DIR_FIGURE8 = 2 } BwDirectivity;
/* Source orientation as a quaternion (same room frame + handedness as bw_set_listener_pose); the
 * dipole axis is the source's forward (+z rotated by q). Per-frame-safe. No-op without the SDK. */
BW_API void     bw_source_set_orientation(BwEngine* e, BwSource s, float qx, float qy, float qz, float qw);
/* Radiation pattern: weight 0=omni (off) .. 0.5=cardioid .. 1=figure-8; power>=1 sharpens the lobe.
 * Per-frame-safe. No-op without the Steam Audio backend. */
BW_API void     bw_source_set_directivity(BwEngine* e, BwSource s, float weight, float power);
/* Named-preset sugar over bw_source_set_directivity (OMNI disables it). */
BW_API void     bw_source_set_directivity_preset(BwEngine* e, BwSource s, BwDirectivity pattern);
/* Read the source's current directivity gain (1 = on-axis/omni .. 0 = full null) — HUD/diagnostics. */
BW_API float    bw_source_get_directivity(BwEngine* e, BwSource s);
/* ---- propagation effects (control thread; no SDK needed — pure per-voice DSP) ----
 * Physically-motivated, opt-in per source; both derive from the live source<->listener distance.
 * Per-frame-safe (enqueue-only), default OFF, independent of the panner/profile and of each other. */
/* Doppler: render the source through its acoustic propagation delay (distance/c). As the source (or
 * the tracked listener) moves, the delay glides and the audio resamples — pitch up when approaching,
 * down when receding. The delay (hence the effect) saturates past ~8 m; enabling adds the real
 * propagation latency. Best for fast movers; subtle for slow ones in a small room. */
BW_API void     bw_source_set_doppler(BwEngine* e, BwSource s, bool on);
/* Air absorption: a distance-driven high-frequency low-pass (far sources sound duller). Subtle at a
 * few metres, pronounced for sources placed at large virtual distances. */
BW_API void     bw_source_set_air_absorption(BwEngine* e, BwSource s, bool on);
/* Source spread / size: angular width of the source, 0 = a point (default) .. 1 = wide. Spreads the
 * source's energy across the speakers around its direction (a waterfall/crowd/ambience that shouldn't
 * collapse to one point), centred on its direction and constant-power. Works with any panner. */
BW_API void     bw_source_set_spread(BwEngine* e, BwSource s, float amount);
/* ---- channel test / diagnostics (control thread; no SDK needed) ----
 * Drive a single OUTPUT channel with a built-in test signal, injected AFTER the per-speaker align
 * stage (a raw value straight on the channel) — a speaker-check / wiring-verification / calibration
 * tool, NOT a spatial path (it bypasses the panner; don't use it to "place" audio). `channel` is in
 * [0, 26). Per-frame-safe, takes effect next block, no bw_commit needed; multiple channels at once.
 * gain 0 or BW_TEST_OFF silences a channel. Composes with the profiles: cave/both -> a raw tone on
 * that DVS channel/speaker; binaural -> that bus channel HRTF'd as its virtual speaker. */
typedef enum { BW_TEST_OFF = 0, BW_TEST_SINE = 1, BW_TEST_NOISE = 2 } BwTestKind;
BW_API void     bw_test_signal(BwEngine* e, uint32_t channel, BwTestKind kind, float gain);
/* Read back the effective speaker layout (the default grid, or the file from BwConfig.layout_path):
 * fills `xyz` with up to `cap` speakers' positions (3 floats each: x,y,z room space, in channel/index
 * order) and returns the total count (26). Pass xyz=NULL to just query the count. For visualizing or
 * auditioning the geometry the engine is actually panning with. Control thread; safe any time. */
BW_API uint32_t bw_get_speakers(BwEngine* e, float* xyz, uint32_t cap);
/* Per-channel output meter: fills `peaks` with up to `cap` channels' LAST-BLOCK peak |sample|
 * (linear), measured at the very end of the render — after align, the test signal, and the limiter,
 * i.e. exactly what each device channel received. Returns the count filled. Control thread,
 * per-frame-safe (relaxed atomic reads; no locks/alloc) — drive channel meters or a speaker-activity
 * display (the playground lights each speaker gizmo with it). Reads 0 until audio is running. */
BW_API uint32_t bw_get_bus_levels(BwEngine* e, float* peaks, uint32_t cap);
/* ---- panner selection (load-time, or live: the switch is atomic) ----
 * The per-source panner that writes the 26-ch bus. DBAP (default) is listener-relative, recomputed
 * per frame from the tracked position — for a MOVING observer roaming the array. SPCAP is a smooth,
 * all-speaker, placement-correcting sweet-spot panner for a FIXED observer (a static listener: don't
 * track, set the sweet spot once); it conserves loudspeaker power across an uneven array. VBAP is the
 * sharpest (the 2-3 nearest speakers of the containing triangle carry a source) — also fixed-observer,
 * best when the array triangulates cleanly; it falls back to DBAP for a non-triangulable array. SPCAP
 * and VBAP assume a fixed listener (with internal tracking their cache rebuilds every block — use DBAP
 * for a moving observer). Does not affect the diffuse bed / ambisonic paths. See docs/spatialization.md. */
typedef enum { BW_PAN_DBAP = 0, BW_PAN_SPCAP = 1, BW_PAN_VBAP = 2 } BwPanner;
BW_API void     bw_set_panner(BwEngine* e, BwPanner panner);
/* Dual-band panning (off by default): split each source at ~700 Hz and pan the low band with
 * amplitude (pressure / velocity-vector) normalisation, the high band with the panner's usual power
 * (energy-vector) normalisation — better low-frequency localisation for a near-centred listener. Wraps
 * the selected panner; live-toggleable for A/B. Sweet-spot dependent like VBAP (see docs). */
BW_API void     bw_set_dual_band(BwEngine* e, bool on);
/* ---- output protection limiter (ON by default at -1 dBFS) ----
 * The final stage on the 26-ch output — everything (voices, beds, reflections, pathing, per-speaker
 * trims, the test signal) passes through it before the device. LINKED across channels: one gain from
 * the cross-channel peak, so engaging never shifts the spatial image; ~1 ms attack / ~120 ms release,
 * then a hard clamp at the ceiling. This is driver/speaker protection against digital overs, not a
 * mastering limiter — if it engages in normal use, turn the content down. Control thread; live. */
BW_API void     bw_set_limiter(BwEngine* e, bool on);
BW_API void     bw_set_limiter_ceiling(BwEngine* e, float ceiling_db);   /* e.g. -1.0f; clamped to [-60, 0] */
/* Select the diffuse-bed ambisonic decoder (load-time: between bw_create and bw_start). SAMPLING is the
 * default projection decode; ALLRAD (All-Round Ambisonic Decoding) decodes to a uniform virtual layout
 * then VBAPs onto the real array — robust on an IRREGULAR/lopsided array (keeps a diffuse field even
 * with no loud directions, and localizes better), at the cost of a heavier load-time build. Affects the
 * ambisonic + reflection BEDS only, not the point-source panner. See docs/spatialization.md. */
typedef enum { BW_DECODE_SAMPLING = 0, BW_DECODE_ALLRAD = 1 } BwBedDecoder;
BW_API void     bw_set_bed_decoder(BwEngine* e, BwBedDecoder decoder);
/* ---- offline panner evaluation (no engine handle; for layout scoring/optimization in tools) ----
 * The per-speaker gains the given `panner` produces for `nsrc` source positions heard from one
 * listener `lis`, over a layout of `n` speaker positions (`positions` = n*3 floats, room space). Writes
 * out[i*n + s] (nsrc*n floats); returns nsrc. Default DBAP/distance tuning. Shares the SPCAP/VBAP
 * per-listener cache across the batch (efficient over a grid). Pure — uses the same panner solves the
 * audio path does, so a tool scores a layout against the ACTUAL panner, not a copy. */
BW_API uint32_t bw_panner_gains_batch(BwPanner panner, const float* positions, uint32_t n,
                                      const float lis[3], const float* srcs, uint32_t nsrc, float* out);
BW_API void bw_set_listener_pose(BwEngine* e, float px, float py, float pz,
                                              float qx, float qy, float qz, float qw);
/* Read back the listener pose the engine is currently rendering with — the committed pose, or,
 * under track_internal, the freshest tracked pose. For visuals/logging/debugging tracking; safe
 * to poll from the control thread. Fills p[3] (position) and q[4] (orientation xyzw). */
BW_API void bw_get_listener_pose(BwEngine* e, float p[3], float q[4]);
/* ---- frame boundary ----
 * Promotes this frame's position/pose updates as one coherent snapshot and drains
 * the event ring (voice-ended, sound-retired). Call once per frame after pushing
 * all source + listener updates. */
BW_API void bw_commit(BwEngine* e);