bindings/unity/Runtime/Bw.cs


        // ---- reflection bed ----
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_reflections_config(IntPtr e, in BwReflectionConfig cfg);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_reflections_set_gain(IntPtr e, float linear);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_set_reflections(IntPtr e, uint s, [MarshalAs(UnmanagedType.I1)] bool on);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_set_reflection_send(IntPtr e, uint s, float gain);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_set_reflection_distance(IntPtr e, uint s, [MarshalAs(UnmanagedType.I1)] bool on);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_set_pathing(IntPtr e, uint s, [MarshalAs(UnmanagedType.I1)] bool on);

        // ---- directional FDN reverb bed (load-time; works WITHOUT the Steam Audio build) ----
        // Takes the reverb tap INSTEAD of the Steam reflection bed (one bed at a time), fed by the same
        // per-source send (bw_source_set_reflections + send levels apply unchanged). All three are
        // load-time (between bw_create and bw_start). Decay is a DESIGN parameter — do not copy the room's
        // measured RT60; the real room adds its own on top.
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_reverb_fdn(IntPtr e, [MarshalAs(UnmanagedType.I1)] bool on);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_fdn_set_decay(IntPtr e, float rt60LowS, float rt60HighS, float xoverHz);
        // Anisotropic decay: scale the decay time toward `dir` (3 floats, room space) by `factor`
        // (< 1 = the field dies faster that way — an open or treated side).
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_fdn_set_decay_direction(IntPtr e, float[] dir, float factor);

        // ---- image-source EARLY reflections (per source; no SDK needed) ----
        // The other half of the phonon-free acoustics path: the FDN renders the late diffuse tail, this
        // renders the six first-order wall bounces — the ones that carry room size and source distance.
        // Each is a real POINT SOURCE at its mirrored position, panned through the engine's own
        // listener-relative panner, so reflections keep correct direction AND parallax as the listener
        // walks — which no shared reverb bed can do. Needs the room: call bw_scene_set_box first.
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_source_set_early_reflections(IntPtr e, uint s, [MarshalAs(UnmanagedType.I1)] bool on);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_early_reflections_set_gain(IntPtr e, float linear);   // default 1; live

        // ---- propagation effects (no SDK needed; opt-in per source, default off) ----
        [DllImport(DLL, CallingConvention = CC)] public static extern void  bw_source_set_doppler(IntPtr e, uint s, [MarshalAs(UnmanagedType.I1)] bool on);
        [DllImport(DLL, CallingConvention = CC)] public static extern void  bw_source_set_air_absorption(IntPtr e, uint s, [MarshalAs(UnmanagedType.I1)] bool on);
        // Equal-loudness distance compensation: an LF shelf tracking the panner's attenuation ("far, not
        // tinny"). A perceptual stylization, not physics — leave off for strict realism.
        [DllImport(DLL, CallingConvention = CC)] public static extern void  bw_source_set_loudness_comp(IntPtr e, uint s, [MarshalAs(UnmanagedType.I1)] bool on);
        [DllImport(DLL, CallingConvention = CC)] public static extern void  bw_source_set_spread(IntPtr e, uint s, float amount);
        // Source size in METRES (radius; 0 = point). The physical alternative to the angular spread above:
        // the width is the angle the radius subtends from the listener, so a 2 m source STAYS 2 m wide as
        // the listener walks. Floors spread (the larger of the two wins).
        [DllImport(DLL, CallingConvention = CC)] public static extern void  bw_source_set_size(IntPtr e, uint s, float radiusM);

        // ---- directivity ----
        [DllImport(DLL, CallingConvention = CC)] public static extern void  bw_source_set_orientation(IntPtr e, uint s, float qx, float qy, float qz, float qw);
        [DllImport(DLL, CallingConvention = CC)] public static extern void  bw_source_set_directivity(IntPtr e, uint s, float weight, float power);
        [DllImport(DLL, CallingConvention = CC)] public static extern void  bw_source_set_directivity_preset(IntPtr e, uint s, BwDirectivity pattern);
        [DllImport(DLL, CallingConvention = CC)] public static extern float bw_source_get_directivity(IntPtr e, uint s);

        // ---- channel test / diagnostics (drives a raw output channel; speaker-check tool) ----
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_test_signal(IntPtr e, uint channel, BwTestKind kind, float gain);
        // The engine's active channel count = the layout's speaker count (4..26). Size meter/speaker
        // arrays with this; never hard-code 26 (that is only the compile-time capacity).
        [DllImport(DLL, CallingConvention = CC)] public static extern uint bw_channel_count(IntPtr e);
        // Read back the effective speaker layout (xyz = cap*3 floats, x,y,z per speaker); returns the count.
        [DllImport(DLL, CallingConvention = CC)] public static extern uint bw_get_speakers(IntPtr e, [Out] float[] xyz, uint cap);
        // Per-channel output meter: last-block peak |sample| per channel (linear), as sent to the device; returns the count filled.
        [DllImport(DLL, CallingConvention = CC)] public static extern uint bw_get_bus_levels(IntPtr e, [Out] float[] peaks, uint cap);
        // Last block's ACTIVE voice count (a voice-pool gauge for a HUD next to the meters); 0 until audio runs.
        [DllImport(DLL, CallingConvention = CC)] public static extern uint bw_get_active_voices(IntPtr e);
        // Panner selection (load-time, or live — the switch is atomic): DBAP (moving observer, default),
        // SPCAP or VBAP (both fixed-observer sweet-spot panners).
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_set_panner(IntPtr e, BwPanner panner);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_set_dual_band(IntPtr e, [MarshalAs(UnmanagedType.I1)] bool on);
        // How bw_source_set_spread renders width (live A/B): LOBE (default, one reshaped solve) or MDAP
        // (a ring of virtual sources panned with the selected panner — panner-true, ~13x the solve cost).
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_set_spread_mode(IntPtr e, BwSpreadMode mode);
        // Decorrelate the WIDE part of spread sources (live A/B): per-speaker velvet-noise filters make the
        // copies mutually incoherent — real extent, no phantom collapse or comb-filtering as the listener
        // walks. Point sources (spread 0) are untouched.
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_set_decorrelation(IntPtr e, [MarshalAs(UnmanagedType.I1)] bool on);
        // Near-listener widening (0 = off): floor every source's spread at 1 - dist/radius, so a source
        // flying at the head widens instead of snapping across the nearest speaker. ~1.0 m is a good start.
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_set_near_spread(IntPtr e, float radiusM);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_set_limiter(IntPtr e, [MarshalAs(UnmanagedType.I1)] bool on);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_set_limiter_ceiling(IntPtr e, float ceilingDb);   // default -1 dBFS; clamped [-60, 0]
        // One ramped scalar over the whole mix, applied BEFORE the per-speaker align stage (trims + the raw
        // channel-test signal stay calibrated) and before the limiter. The volume knob / scene fade. Live.
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_set_master_gain(IntPtr e, float linear);
        // Diffuse-bed decoder (load-time): sampling (default) or AllRAD (robust on irregular arrays).
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_set_bed_decoder(IntPtr e, BwBedDecoder decoder);
        // How ambisonic BEDS render (live; each bed crossfades — a click-free A/B): MATRIX (default, the
        // static SH->speaker decode) or PARAMETRIC (DirAC: the directional stream is re-panned through the
        // listener-relative panner, so a recorded soundfield becomes WALKABLE — parallax off-centre).
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_set_bed_renderer(IntPtr e, BwBedRenderer renderer);
        // Tracked room EQ (layouts carrying a room_eq_grid): the LF modal cuts follow the live listener
        // position. ON by default when a grid is present; this is the live kill switch. No-op without a grid.
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_set_tracked_room_eq(IntPtr e, [MarshalAs(UnmanagedType.I1)] bool on);
        // Offline panner evaluation (no engine handle): out = nsrc*n gains for a layout/panner; for layout scoring.
        [DllImport(DLL, CallingConvention = CC)] public static extern uint bw_panner_gains_batch(BwPanner panner, float[] positions, uint n, float[] lis, float[] srcs, uint nsrc, [Out] float[] outGains);

        // ---- listener + frame boundary ----
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_set_listener_pose(IntPtr e, float px, float py, float pz, float qx, float qy, float qz, float qw);
        // The engine writes p[0..2] and q[0..3] UNCONDITIONALLY — p must be length>=3, q length>=4, both
        // non-null, or the native write corrupts memory. Prefer the GetListenerPose helper below.
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_get_listener_pose(IntPtr e, [Out] float[] p, [Out] float[] q);
        // Pose prediction (track_internal only; 0 = off): lead the TRACKED position by `leadMs` along the
        // tracker's own velocity, hiding the motion-to-ears latency. Set it to your MEASURED latency —
        // too much lead overshoots on direction changes (clamped at 200 ms). No effect when Unity feeds
        // the pose (bw_set_listener_pose): predict on your side instead.
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_set_pose_prediction(IntPtr e, float leadMs);
        // Extra listeners (multi-occupant compromise panning; up to 3, count 0 = off/single-listener). `xyz`
        // is count*3 floats in ROOM space — the OTHER occupants; the primary stays bw_set_listener_pose /
        // tracking. Every source's gains become the per-speaker energy mean of the per-listener solves.
        // Commit-gated like the pose (push it in the same frame block, before bw_commit).
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_set_extra_listeners(IntPtr e, float[] xyz, uint count);
        [DllImport(DLL, CallingConvention = CC)] public static extern void bw_commit(IntPtr e);

        // ---- convenience ----
        /// <summary>Mint a built-in material by preset. The typed form of bw_material_preset — the enum
        /// name IS the engine's name (lowercased), so a preset can't be misspelled into silently becoming
        /// the generic default.</summary>
        public static uint MaterialPreset(IntPtr e, BwMaterialPreset preset)
            => bw_material_preset(e, PresetName(preset));

        /// <summary>The engine-side name for a preset ("concrete", ...). Case-insensitive engine-side.</summary>
        public static string PresetName(BwMaterialPreset preset) => preset.ToString().ToLowerInvariant();
